# v2en

./: .gitignore  .sourcery.yaml  addsent.py  client_secret_temp.json  config.py  config.yml  dockerfile  install_lib.sh  new_addsent.py  pyproject.toml  requirements.txt  setup.py  train.py
.github/workflows/: ConfirmUpdate.yml  DockerBuildAndPush.yml  TestingRepo.yml  UpdateDatabase.yml  [docker] DockerBuildAndPush.yml  [ux-ui] Testing.yml  [v2en] AutoClosePull.yml  [v2en] UpdateDatabase.yml  addsentcron.yml  codeql.yml  dockerbuildpush.yml  main.yml
.sh/: build.sh  cont.sh
backend/: .env  .eslintrc.js  .prettierrc  package-lock.json  package.json  tsconfig.json
backend/src/: app.controller.mts  app.module.mts  app.module.ts  main.mts  main.ts  schema.gql
backend/src/data/: data.dto.mts  data.entity.mts  data.entity.ts  data.module.mts  data.module.ts  data.resolver.mts  data.resolver.ts  data.service.mts  (+1 more)
cache/: en.dic  vi.dic
data/: en.dump  vi.dump
frontend/: .eslintrc.cjs  cypress.config.ts  index.html  package-lock.json  package.json  quasar.config.js  tsconfig.json
frontend/src/: App.vue  graphql.ts
frontend/src-capacitor/: capacitor.config.json  ionic.config.json  package.json
frontend_new/: pubspec.yaml
frontend_new/lib/: graphql.dart  main.dart
frontend_new/linux/: CMakeLists.txt  my_application.cc
frontend_new/web/: index.html
frontend_new/windows/: CMakeLists.txt
v2enlib/: SQL.py  __init__.py  ai.py  config.py  const.py  gSQL.py  language.py  libs.py  utils.py
v2enlib_src/: __init__.py  gSQL.py  language.py  utils.py
(+77 files in other folders)
